[project]
name = "pixelsort"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Poulin",email = "rrp2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "dearpygui (>=2.0.0,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pywinstyles (>=1.8,<2.0)"
]

[tool.poetry]
packages = [{include = "pixelsort", from = "src"}]


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
